Configured app module

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:supportsRtl="false"
         android:theme="@style/AppTheme">
         
-        <activity android:name=".feature.splash.SplashActivity">
+        <activity
+            android:name=".LaunchActivity"
+            android:theme="@style/AppTheme.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
