--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,7 @@ captures/
 *.jks
 *.keystore
 .signing/
+signing_configs.properties
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
