--- a/.gitignore
+++ b/.gitignore
@@ -51,7 +51,8 @@ captures/
 *.jks
 *.keystore
 .signing/
-signing_configs.properties
+release_configs.properties
+debug_configs.properties
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
